--- a/templates/header.html
+++ b/templates/header.html
@@ -126,7 +126,7 @@
 
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/normalisasi" class="nav-link {% if submenu=='normalisasi' %} active{% endif %}">
+                                    <a href="/normalisasiResult" class="nav-link {% if submenu=='normalisasi' %} active{% endif %}">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Data Normalisasi</p>
                                     </a>
