--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -120,7 +120,7 @@
                                 <div class='card-body'>
                                     <div class="card card-info">
                                         <div class="card-header">
-                                            <h3 class="card-title">Clustering</h3>
+                                            <h3 class="card-title">Normalisasi Data</h3>
                                         </div>
                                         <!-- Date -->
                                         <div class="row">
