--- a/templates/associationResult.html
+++ b/templates/associationResult.html
@@ -117,8 +117,8 @@
         </div>
         <!-- End Modal-->
 
-        <div class="container-fluid">
-            <h5 class="mb-2 mt-4">Small Box</h5>
+        
+            <h5 class="mb-2 mt-4">Variabel yang berpengaruh di tiap cluster</h5>
             <div class="row">
                 {% for i in count %}
                 <!-- ./col -->
@@ -157,18 +157,23 @@
                     {%endif%}
                 </div>
             </div>
+           
           <!-- ./col -->
           {%endfor%}
+        </div>
             <div class="card card-dark">
                 <div class="card-header">
                     <h3 class="card-title">Cluster </h3>
                 </div>
                 <!-- /.card-header -->
-                <div class="card-body p-0">
+                <div class="card-body">
                     <table id="association"class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th style="width: 10px">No.</th>
+                            
+                            <th style="width: 10px;">Cluster</th>
+                            <th style="width: 10px;">Min Support </th>
+                            <th>Min Confidence</th>
                             <th>Jika item ini muncul</th>
                             <th>=></th>
                             <th>Maka item ini juga</th>
@@ -183,9 +188,10 @@
                     <tbody>
                         {% for detail in details %}
                         <tr>
-
-                            <td>{{loop.index}}</td>
-                            <td>{{ detail[1]}}</td>
+                            <td>{{ detail[9] }}</td>
+                            <td>{{ detail[7] }}</td>
+                            <td>{{ detail[8] }}</td>
+                            <td>{{ detail[1] }}</td>
                             <td>=></td>
                             <td>{{ detail[2]}}</td>
                             <td>{{ detail[3]}}</td>
@@ -201,6 +207,7 @@
                 <!-- /.card-body -->
             </div>
             </div>
+            
     </section>
 
 </div>
