--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -13,18 +13,7 @@
                     <div class="col-sm-6">
                         <h1 class="m-0">Clustering Result {{date}}</h1>
                     </div>
-                    <div class="col-sm-4">
-                        <!-- select -->
-                        <div class="form-group">
-                            <label>Data tahun </label>
-                            <select class="custom-select" name="eachYear">
-                                <option>Semua data</option>
-                          <option>2021</option>
-                          <option>2022</option>
-                                         
-                        </select>
-                        </div>
-                    </div>
+                   
                 </div>
                     
 
@@ -62,9 +51,10 @@
                                                 <div class="form-group">
                                                     <label>Data tahun </label>
                                                     <select class="custom-select" name="dataSelect">
-                                                        <option>Semua data</option>
+                                                        
                                                   <option>2021</option>
                                                   <option>2022</option>
+                                                  <option>2023</option>
                                                                  
                                                 </select>
                                                 </div>
@@ -148,7 +138,8 @@
         <div id='donutCluster'>
             <!-- Plotly chart will be drawn inside this DIV -->
         </div>
-        <div id='linechart'>
+        
+        <div id='linechartYear'>
             <!-- Plotly chart will be drawn inside this DIV -->
         </div>
     </div>
@@ -224,6 +215,7 @@
 
         var data = [trace1];
         var layout = {
+        
             margin: {
                 l: 0,
                 r: 0,
@@ -235,7 +227,9 @@
     });
 
     window.onload = function() {
-    var dataset = {{ count | tojson }};
+    var dataset = {{ count2022 | tojson }};
+    var dataset2023 = {{count2023 | tojson}};
+    var button_layer_2_height = 1.2
     var data = [{
         values: [dataset[0],dataset[1],dataset[2],dataset[3]],
         labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
@@ -247,10 +241,55 @@
         hoverinfo: 'label+percent+name+values',
         hole: .4,
         type: 'pie'
-    }];
+    },
+    {
+        values: [dataset2023[0],dataset2023[1],dataset2023[2],dataset2023[3]],
+        labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
+        domain: {
+            column: 0
+        },
+        name: 'Count',
+        visible:false,
+        hoverinfo: 'label+percent+name+values',
+        hole: .4,
+        type: 'pie'
+    }
+    ];
 
+    
+    var updatemenus=[
+        {
+            buttons:[
+                {
+                    args:[{'visible':[true,false]},
+                    {'title': 'Count of 2022'}
+                ],
+                label : "2022",
+                method:"update"
+                },
+                {
+                    args:[{'visible':[false,true]},
+                    {'title': 'Count of 2023'}
+                ],
+                label : "2023",
+                method:"update"
+                }
+
+            ],
+            direction: 'left',
+            pad: {'r': 10, 't': 10},
+            showactive: true,
+            type: 'buttons',
+            x: 0.1,
+            xanchor: 'left',
+            y: button_layer_2_height,
+            yanchor: 'top'
+        }
+
+    ]
     var layout = {
         title: 'Count of Each Cluster',
+        updatemenus:updatemenus,
         annotations: [{
             font: {
                 size: 20
@@ -267,53 +306,14 @@
             rows: 1,
             columns: 2
         }
+    
     };
 
     Plotly.newPlot('donutCluster', data, layout);
-    }
-
-    
-    var column = ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'];
-    var dataset = {{ meanList| tojson }};
-
-    var trace1 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset[0],dataset[1],dataset[2],dataset[3],dataset[4],dataset[5],dataset[6],dataset[7]],
-        mode:'lines',
-        name:'Cluster 1',
-        type: 'scatter'
     };
 
-    var trace2 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset[8],dataset[9],dataset[10],dataset[11],dataset[12],dataset[13],dataset[14],dataset[15]],
-        mode:'lines',
-        name:'Cluster 2',
-        type: 'scatter'
-    };
-    var trace3 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset[16],dataset[17],dataset[18],dataset[19],dataset[20],dataset[21],dataset[22],dataset[23]],
-        mode:'lines',
-        name:'Cluster 3',
-        type: 'scatter'
-    };
-    var trace4 = {
-        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
-        y: [dataset[24],dataset[25],dataset[26],dataset[27],dataset[28],dataset[29],dataset[30],dataset[31]],
-        mode:'lines',
-        name:'Cluster 4',
-        type: 'scatter'
-    };
-    console.log(dataset)
-    var data = [trace1, trace2,trace3, trace4];
-    var layout={
-        title:"Rata-rata nilai tiap cluster",
-        xaxis:{
-            type:'category'
-        }
-    }
-    Plotly.newPlot('linechart', data);
+
+
     if ( ! $.fn.DataTable.isDataTable( '#clustering' ) ) {
     $('#clustering').dataTable({
     dom: 'Bfrtip',
@@ -322,6 +322,117 @@
     }
 </script>
 <script>
+    var column = ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'];
+    
+    var dataset2 = {{ meanList2022| tojson }};
+    var dataset3 =  {{meanList2023 | tojson}};
+    
+    console.log(dataset2)
+
+    var trace1 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][0],dataset2[1][0],dataset2[2][0],dataset2[3][0],dataset2[4][0],dataset2[5][0],dataset2[6][0],dataset2[7][0]],
+        mode:'lines',
+        name:'Cluster 1',
+        type: 'scatter'
+    };
+
+    var trace2 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][1],dataset2[1][1],dataset2[2][1],dataset2[3][1],dataset2[4][1],dataset2[5][1],dataset2[6][1],dataset2[7][1]],
+        name:'Cluster 2',
+        type: 'scatter'
+    };
+    var trace3 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][2],dataset2[1][2],dataset2[2][2],dataset2[3][2],dataset2[4][2],dataset2[5][2],dataset2[6][2],dataset2[7][2]],
+        mode:'lines',
+        name:'Cluster 3',
+        type: 'scatter'
+    };
+    var trace4 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][3],dataset2[1][3],dataset2[2][3],dataset2[3][3],dataset2[4][3],dataset2[5][3],dataset2[6][3],dataset2[7][3]],
+        mode:'lines',
+        name:'Cluster 4',
+        type: 'scatter'
+    };
+
+    var trace5 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset3[0][0],dataset3[1][0],dataset3[2][0],dataset3[3][0],dataset3[4][0],dataset3[5][0],dataset3[6][0],dataset3[7][0]],
+        mode:'lines',
+        name:'Cluster 1',
+        type: 'scatter',
+        visible:false
+    };
+
+    var trace6 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset3[0][1],dataset3[1][1],dataset3[2][1],dataset3[3][1],dataset3[4][1],dataset3[5][1],dataset3[6][1],dataset3[7][1]],
+        name:'Cluster 2',
+        type: 'scatter',
+        visible:false
+    };
+    var trace7 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset3[0][2],dataset3[1][2],dataset3[2][2],dataset3[3][2],dataset3[4][2],dataset3[5][2],dataset3[6][2],dataset3[7][2]],
+        mode:'lines',
+        name:'Cluster 3',
+        type: 'scatter',
+        visible:false
+    };
+    var trace8 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset3[0][3],dataset3[1][3],dataset3[2][3],dataset3[3][3],dataset3[4][3],dataset3[5][3],dataset3[6][3],dataset3[7][3]],
+        mode:'lines',
+        name:'Cluster 4',
+        type: 'scatter',
+        visible:false
+    };
+   
+    var data = [trace1, trace2,trace3, trace4, trace5, trace6, trace7,trace8];
+    //var data = [trace1, trace2,trace3, trace4]
+    var button_layer_2_height = 1.2
+    
+    var updatemenus=[
+        {
+            buttons:[
+                {
+                    args:[{'visible':[true,true, true, true, false, false,false,false]},
+                    {'title': 'Mean of 2022'}
+                ],
+                label : "2022",
+                method:"update"
+                },
+                {
+                    args:[{'visible':[false,false, false, false, true, true, true,true]},
+                    {'title': 'Mean of 2023'}
+                ],
+                label : "2023",
+                method:"update"
+                }
+
+            ],
+            direction: 'left',
+            pad: {'r': 10, 't': 10},
+            showactive: true,
+            type: 'buttons',
+            x: 0.1,
+            xanchor: 'left',
+            y: button_layer_2_height,
+            yanchor: 'top'
+        }
+
+    ]
+    var layout={
+        title:"Rata-rata nilai tiap cluster",
+        updatemenus:updatemenus,
+        xaxis:{
+            type:'category'
+        }
+    }
+    Plotly.newPlot('linechartYear', data,layout);
     
 </script>
 <script>
