--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -23,8 +23,9 @@
 
         <div class="btn-group">
 
-
+            <!--
             <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#myModal">Add Data Per Item</button>
+            -->
             <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#uploadFile">Add Data Via File</button>
             <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#normalisasi">Normalisasi</button>
 
@@ -155,7 +156,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">DataTable with default features</h3>
+                <h3 class="card-title">Data Penilaian</h3>
               </div>
             <div class="card-body" >
                 <table id="penilaian" class="table table-striped table-hover">
