--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -28,7 +28,7 @@
  
                         
             <div class="btn-group">
-                <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#asosiasi">Asosiasi Data</button>
+                <button type="button" class="btn btn-outline-info mb-3 pull-right" data-toggle="modal" data-target="#asosiasi">Asosiasi Data</button>
             </div>
 
             <div id="asosiasi" class="modal fade" role="dialog">
@@ -76,16 +76,15 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-dark">
                 <div class="card-header">
-                    <h3 class="card-title">Data with clustering result</h3>
+                    <h3 class="card-title">Data Hasil Clustering</h3>
                 </div>
                 <!-- /.card-header -->
 
                     <div class="card-body" >
-                        <table id="clustering" class="table table-striped table-hover">
-                            <thead>
-                    
+                        <table id="clustering" class="table table-striped table-hover display responsive nowrap" style="width:100%">
+                            <thead>                   
                             <tr>
                                 <th style="width: 10px">No.</th>
                                 <th>NIK</th>
@@ -227,6 +226,8 @@
     });
 
     window.onload = function() {
+    
+    {% if count2023 is defined %}
     var dataset = {{ count2022 | tojson }};
     var dataset2023 = {{count2023 | tojson}};
     var button_layer_2_height = 1.2
@@ -310,9 +311,52 @@
     };
 
     Plotly.newPlot('donutCluster', data, layout);
+    {%else%}
+    var dataset = {{ count2022 | tojson }};
+   
+    var button_layer_2_height = 1.2
+    var data = [{
+        values: [dataset[0],dataset[1],dataset[2],dataset[3]],
+        labels: ['cluster 1','cluster 2','cluster 3','cluster 4'],
+        domain: {
+            column: 0
+        },
+        name: 'Count',
+        
+        hoverinfo: 'label+percent+name+values',
+        hole: .4,
+        type: 'pie'
+    }
+    ];
+
+    var layout = {
+        title: 'Count of Each Cluster',
+        annotations: [{
+            font: {
+                size: 20
+            },
+            showarrow: false,
+            text: 'Count',
+            x: 0.17,
+            y: 0.5
+        }],
+        height: 400,
+        width: 600,
+        showlegend: true,
+        grid: {
+            rows: 1,
+            columns: 2
+        }
+    
     };
 
+    Plotly.newPlot('donutCluster', data, layout);
 
+    {%endif%}
+
+};
+    
+    
 
     if ( ! $.fn.DataTable.isDataTable( '#clustering' ) ) {
     $('#clustering').dataTable({
@@ -323,7 +367,7 @@
 </script>
 <script>
     var column = ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'];
-    
+    {% if meanList2023 is defined %}
     var dataset2 = {{ meanList2022| tojson }};
     var dataset3 =  {{meanList2023 | tojson}};
     
@@ -433,6 +477,50 @@
         }
     }
     Plotly.newPlot('linechartYear', data,layout);
+    {%else%}
+    var dataset2 = {{ meanList2022| tojson }};
+
+    var trace1 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][0],dataset2[1][0],dataset2[2][0],dataset2[3][0],dataset2[4][0],dataset2[5][0],dataset2[6][0],dataset2[7][0]],
+        mode:'lines',
+        name:'Cluster 1',
+        type: 'scatter'
+    };
+
+    var trace2 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][1],dataset2[1][1],dataset2[2][1],dataset2[3][1],dataset2[4][1],dataset2[5][1],dataset2[6][1],dataset2[7][1]],
+        name:'Cluster 2',
+        type: 'scatter'
+    };
+    var trace3 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][2],dataset2[1][2],dataset2[2][2],dataset2[3][2],dataset2[4][2],dataset2[5][2],dataset2[6][2],dataset2[7][2]],
+        mode:'lines',
+        name:'Cluster 3',
+        type: 'scatter'
+    };
+    var trace4 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset2[0][3],dataset2[1][3],dataset2[2][3],dataset2[3][3],dataset2[4][3],dataset2[5][3],dataset2[6][3],dataset2[7][3]],
+        mode:'lines',
+        name:'Cluster 4',
+        type: 'scatter'
+    };
+   
+    var data = [trace1, trace2,trace3, trace4];
+
+    var button_layer_2_height = 1.2
+   
+    var layout={
+        title:"Rata-rata nilai tiap cluster",
+        xaxis:{
+            type:'category'
+        }
+    }
+    Plotly.newPlot('linechartYear', data,layout);
+    {%endif%}
     
 </script>
 <script>
