--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -154,20 +154,26 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+       
+        <div class="card card-dark">
             <div class="card-header">
                 <h3 class="card-title">Data Penilaian</h3>
-              </div>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
             <div class="card-body" >
-                <table id="penilaian" class="table table-striped table-hover">
+                <table id="penilaian"class="table table-striped table-hover display responsive nowrap" style="width:100%">
                     <thead>
                         <tr>
                             <th hidden="hidden"></th>
                             <th style="width: 10px">No.</th>
                             <th>NIK</th>
                             <th>KPI</th>
-                            <th>Performance</th>
-                            <th>Competency</th>
+                            <th  style="word-wrap: break-word;">Performance</th>
+                            <th  style="word-wrap: break-word;">Competency</th>
                             <th>Learning Point</th>
                             <th>Kerja Ibadah</th>
                             <th>Apresiasi</th>
@@ -184,8 +190,8 @@
                             <td>{{loop.index}}</td>
                             <td>{{ user[1]}}</td>
                             <td>{{ user[2]}}</td>
-                            <td>{{ user[3]}}</td>
-                            <td>{{ user[4]}}</td>
+                            <td  style="word-wrap: break-word;">{{ user[3]}}</td>
+                            <td  style="word-wrap: break-word;">{{ user[4]}}</td>
                             <td>{{ user[5]}}</td>
                             <td>{{ user[6]}}</td>
                             <td>{{ user[7]}}</td>
@@ -204,6 +210,7 @@
             <!-- /.card-body -->
         </div>
         <!-- /.card -->
+
 </div>
 </section>
 <!-- /.content -->
