--- a/templates/normalisasiResult.html
+++ b/templates/normalisasiResult.html
@@ -71,17 +71,22 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card card-dark">
             <div class="card-header">
-                <h3 class="card-title">DataTable with default features</h3>
+                <h3 class="card-title">Data Hasil Normalisasi</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                </div>
               </div>
             <div class="card-body" >
-                <table id="penilaian" class="table table-striped table-hover">
+                <table id="penilaian" class="table table-striped table-hover display responsive nowrap" style="width:100%">
                     <thead>
                         <tr>
                             <th hidden="hidden"></th>
                             <th style="width: 10px">No.</th>
-                            <th>Tahun</th>
+                            <th style="width: 10px">Tahun</th>
                             <th>NIK</th>
                             <th>KPI</th>
                             <th>Performance</th>
